--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "@material-ui/core": "^1.2.1",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "lost": "^8.2.1",
@@ -65,6 +66,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
+    "redux-form": "^7.4.2",
     "redux-promise": "^0.5.3",
     "redux-saga": "^0.16.0"
   }
