--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-form": "^7.4.2",
+    "redux-form-material-ui": "^4.3.4",
     "redux-promise": "^0.5.3",
     "redux-saga": "^0.16.0"
   }
