--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "express": "^4.16.3",
     "lost": "^8.2.1",
     "material-ui": "^0.20.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
